// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`triplify examples Alice.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

<http://example.org/valuenote/Alice.md> dot:wikipath \\"Alice.md\\" ;
	a dot:Note ;
	dot:contains <placeholder:Alice> .

<placeholder:Alice> dot:wikipath \\"Alice.md\\" ;
	schema:name \\"Alice\\" ;
	dot:selector \\"Alice\\" ;
	a dot:Block, <placeholder:%5B%5BPerson%5D%5D> ;
	dot:links <placeholder:Person>, <placeholder:Ice%20cream> .

"
`;

exports[`triplify examples People.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

<http://example.org/valuenote/People.md> dot:wikipath \\"People.md\\" ;
	a dot:Note ;
	dot:contains <placeholder:People> .

<placeholder:People> dot:wikipath \\"People.md\\" ;
	schema:name \\"People\\" ;
	dot:selector \\"People\\" ;
	a dot:Block ;
	dot:contains <placeholder:alice>, <placeholder:alison> .

<placeholder:alice> dot:wikipath \\"People.md\\" ;
	schema:name \\"Alice\\" ;
	dot:selector \\"Alice\\" ;
	a dot:Block ;
	dot:links <placeholder:%23Alison> ;
	<placeholder:foaf%3Aknows> <placeholder:%5B%5B%23Alison%5D%5D> .

<placeholder:alison> dot:wikipath \\"People.md\\" ;
	schema:name \\"Alison\\" ;
	dot:selector \\"Alison\\" ;
	a dot:Block ;
	dot:links <placeholder:%23Alice> ;
	<placeholder:foaf%3Aknows> <placeholder:%5B%5B%23Alice%5D%5D> .

"
`;

exports[`triplify examples Person.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

<http://example.org/valuenote/Person.md> dot:wikipath \\"Person.md\\" ;
	a dot:Note ;
	dot:contains <placeholder:Person> .

<placeholder:Person> dot:wikipath \\"Person.md\\" ;
	schema:name \\"Person\\" ;
	dot:selector \\"Person\\" ;
	a dot:Block ;
	dot:contains <placeholder:named>, <placeholder:Subsection> ;
	<placeholder:description> <placeholder:the%20class%20of%20persons> .

<placeholder:named> dot:wikipath \\"Person.md\\" ;
	schema:name \\"Section\\" ;
	dot:selector \\"Section\\" ;
	a dot:Block ;
	<placeholder:property> <placeholder:A> .

<placeholder:Subsection> dot:wikipath \\"Person.md\\" ;
	schema:name \\"Subsection\\" ;
	dot:selector \\"Subsection\\" ;
	a dot:Block ;
	<placeholder:property> <placeholder:C>, <placeholder:B> ;
	dot:tag \\"person\\" .

"
`;

exports[`triplify examples T2.canvas 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

_:b4 schema:description \\"\\"\\"## Alice

\\"\\"\\" ;
	ex:undefined _:b5 .

_:b5 schema:description \\"## Ice cream\\" .

<http://example.org/valuenote/T2.canvas> dot:contains [
		schema:description \\"## Bob\\" ;
		ex:undefined _:b4, _:b6 ;
	], _:b4, _:b5 .

"
`;

exports[`triplify examples Test Canvas.canvas 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

ex:friends schema:name \\"ex:friends\\" ;
	dot:contains <http://example.org/note/bob/Bob.md>, <http://example.org/note/Alice.md> ;
	ex:same-as <http://example.org/note/Person.md> .

<http://example.org/note/bob/Bob.md> schema:name \\"Bob\\" ;
	dot:wikipath \\"bob/Bob.md\\" ;
	ex:details <http://example.org/note/bob/Bob\\\\u0020Details.md> ;
	ex:lives-in <http://example.org/note/houses/BobHouse.md> ;
	ex:drew <http://example.org/note/houses/img.png> .

<http://example.org/note/Alice.md> schema:name \\"Alice\\" ;
	dot:wikipath \\"Alice.md\\" .

<http://example.org/note/Person.md> schema:name \\"Person\\" ;
	dot:wikipath \\"Person.md\\" .

<http://example.org/note/bob/Bob\\\\u0020Details.md> schema:name \\"Bob Details\\" ;
	dot:wikipath \\"bob/Bob Details.md\\" .

<http://example.org/note/houses/img.png> schema:name \\"img.png\\" ;
	dot:wikipath \\"houses/img.png\\" .

<http://example.org/note/houses/BobHouse.md> schema:name \\"BobHouse\\" ;
	dot:wikipath \\"houses/BobHouse.md\\" .

<http://example.org/valuenote/Test\\\\u0020Canvas.canvas> dot:contains [
		schema:name \\"Entities\\" ;
		dot:contains ex:friends, <http://example.org/note/bob/Bob.md>, <http://example.org/note/Alice.md>, <http://example.org/note/Person.md>, <http://example.org/note/bob/Bob\\\\u0020Details.md> ;
	], [
		schema:name \\"Resources\\" ;
		dot:contains <http://example.org/note/houses/img.png> ;
	], <http://example.org/note/houses/BobHouse.md> .

"
`;

exports[`triplify examples Yaml.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

<http://example.org/valuenote/Yaml.md> dot:wikipath \\"Yaml.md\\" ;
	dot:tag \\"cats\\", \\"dogs\\" ;
	<placeholder:date%20updated> <placeholder:2021-08-05T17%3A10%3A34%2B02%3A00> ;
	<placeholder:togs> <placeholder:cats>, <placeholder:dogs> ;
	<placeholder:one> <placeholder:pepe>, <placeholder:carlos> ;
	<placeholder:an-uri> <http://some-uri.com> ;
	<placeholder:hello> <placeholder:world> ;
	a dot:Note .

"
`;

exports[`triplify examples bob/Bob Details.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

<http://example.org/valuenote/bob/Bob\\\\u0020Details.md> dot:wikipath \\"bob/Bob Details.md\\" ;
	a dot:Note ;
	dot:contains <placeholder:More%20details%20about%20Bob> .

<placeholder:More%20details%20about%20Bob> dot:wikipath \\"bob/Bob Details.md\\" ;
	schema:name \\"More details about Bob\\" ;
	dot:selector \\"More details about Bob\\" ;
	a dot:Block ;
	dot:contains <placeholder:1>, <placeholder:2>, <placeholder:3> .

<placeholder:1> dot:wikipath \\"bob/Bob Details.md\\" ;
	schema:name \\"Section\\" ;
	dot:selector \\"Section\\" ;
	a dot:Block ;
	dot:links <placeholder:Bob%20Details%23%5E2>, <placeholder:Bob%20Details%23A%20header> ;
	<placeholder:description> <placeholder:Section%201> ;
	<placeholder:somewhat%20related> <placeholder:%5B%5BBob%20Details%23%5E2%5D%5D> ;
	<placeholder:points%20to%20the%20document> <placeholder:%5B%5BBob%20Details%23A%20header%5D%5D> .

<placeholder:2> dot:wikipath \\"bob/Bob Details.md\\" ;
	schema:name \\"Section\\" ;
	dot:selector \\"Section\\" ;
	a dot:Block ;
	dot:links <placeholder:Bob%20Details%23%5E3%20> ;
	<placeholder:description> <placeholder:Section%202> .

<placeholder:3> dot:wikipath \\"bob/Bob Details.md\\" ;
	schema:name \\"Section\\" ;
	dot:selector \\"Section\\" ;
	a dot:Block ;
	dot:links <placeholder:Unknown%23%5E1> ;
	<placeholder:description> <placeholder:Section%203> .

"
`;

exports[`triplify examples bob/Bob.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

<http://example.org/valuenote/bob/Bob.md> dot:wikipath \\"bob/Bob.md\\" ;
	dot:links <placeholder:img.png>, <placeholder:Link>, <placeholder:%20%20%20%20%20..%2Fhouses%2FBobHouse.md>, <placeholder:.%2Fbob%2FBob%20Details.md>, <placeholder:..%2FAlice.md>, <placeholder:..%2Fhouses%2Fimg.png>, <placeholder:%2FPerson.md>, <placeholder:http%3A%2F%2Fsomething.com> ;
	<placeholder:with%20image> <placeholder:%5B%5Bimg.png%5D%5D> ;
	<placeholder:lives%20in> <placeholder:%5BTest%20with%20relative%5D(%20%20%20%20%20..%2Fhouses%2FBobHouse.md)> ;
	<placeholder:has%20details> <placeholder:%5BBob%20Details.md%5D(.%2Fbob%2FBob%20Details.md)> ;
	ex:knows <placeholder:%5BAlice%5D(..%2FAlice.md)> ;
	<placeholder:has%20image%201> <placeholder:!%5BLovely%20image%5D(..%2Fhouses%2Fimg.png)> ;
	a <placeholder:%5BTest%20with%20absolute%5D(%2FPerson.md)>, dot:Note .

"
`;

exports[`triplify examples bob/links.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

<http://example.org/valuenote/bob/links.md> dot:wikipath \\"bob/links.md\\" ;
	a dot:Note ;
	dot:contains <placeholder:Links> .

<placeholder:Links> dot:wikipath \\"bob/links.md\\" ;
	schema:name \\"Links\\" ;
	dot:selector \\"Links\\" ;
	a dot:Block ;
	dot:contains <placeholder:Produce%20two%20simple%20links>, <placeholder:Alias>, <placeholder:More%20data> .

<placeholder:Produce%20two%20simple%20links> dot:wikipath \\"bob/links.md\\" ;
	schema:name \\"Produce two simple links\\" ;
	dot:selector \\"Produce two simple links\\" ;
	a dot:Block ;
	dot:links <placeholder:http%3A%2F%2Fweb1.org>, <placeholder:http%3A%2F%2Fweb2.org> .

<placeholder:Alias> dot:wikipath \\"bob/links.md\\" ;
	schema:name \\"Alias\\" ;
	dot:selector \\"Alias\\" ;
	a dot:Block ;
	dot:links <placeholder:https%3A%2F%2Fwww.rand.org%2Fcontent%2Fdam%2Frand%2Fpubs%2Fpapers%2F2008%2FP899.pdf> .

<placeholder:More%20data> dot:wikipath \\"bob/links.md\\" ;
	schema:name \\"More data\\" ;
	dot:selector \\"More data\\" ;
	a dot:Block ;
	dot:links <placeholder:%23Alias>, <placeholder:links%23Alias>, <placeholder:..%2Fhouses%2Fimg.png>, <placeholder:dot%20triples>, <placeholder:bob%2FBob%20Details>, <placeholder:bob%2Flinks.md>, <placeholder:http%3A%2F%2Fexample.com>, <placeholder:link%201%20>, <placeholder:link%201>, <placeholder:img.png>, <placeholder:http%3A%2F%2Fexample2.com>, <placeholder:http%3A%2F%2Fexample3.com>, <placeholder:protocol> ;
	<placeholder:has%20image> <placeholder:!%5BLovely%20image%5D(..%2Fhouses%2Fimg.png)> .

"
`;

exports[`triplify examples dot triples.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

<http://example.org/valuenote/dot\\\\u0020triples.md> dot:wikipath \\"dot triples.md\\" ;
	a dot:Note ;
	dot:contains <placeholder:Dot%20triples%20syntax> .

<placeholder:Dot%20triples%20syntax> dot:wikipath \\"dot triples.md\\" ;
	schema:name \\"Dot triples syntax\\" ;
	dot:selector \\"Dot triples syntax\\" ;
	a dot:Block ;
	dot:contains <placeholder:Alice>, <placeholder:Embedded> .

<placeholder:Alice> dot:wikipath \\"dot triples.md\\" ;
	schema:name \\"Alice\\" ;
	dot:selector \\"Alice\\" ;
	a dot:Block ;
	<placeholder:has> <placeholder:37%20years%20old> ;
	dot:links <placeholder:Alice>, <placeholder:Bob> ;
	ex:knows <placeholder:%5B%5BBob%5D%5D> .

<placeholder:A> <placeholder:B> <placeholder:C> .

<placeholder:Embedded> dot:wikipath \\"dot triples.md\\" ;
	schema:name \\"Embedded\\" ;
	dot:selector \\"Embedded\\" ;
	a dot:Block ;
	<placeholder:EA> <placeholder:EB> ;
	<placeholder:EC> <placeholder:ED> .

"
`;

exports[`triplify examples houses/BobHouse.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .

<http://example.org/valuenote/houses/BobHouse.md> dot:wikipath \\"houses/BobHouse.md\\" ;
	a <placeholder:House>, dot:Note .

"
`;

exports[`triplify examples houses/img.png 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://pkm-united.org/> .
"
`;
